@@ -165,7 +165,7 @@ public class QueryComponent extends SearchComponent
     }
 
     rsp.add("response",rb.getResults().docList);
-
+    rsp.getToLog().add("hits", rb.getResults().docList.size());
 
     boolean fsv = req.getParams().getBool(ResponseBuilder.FIELD_SORT_VALUES,false);
     if(fsv){
